--- a/index.html
+++ b/index.html
@@ -19,65 +19,83 @@
     <header>
       <h2>École Ingénieurs et débouchés</h2>
       <p>Voilà la liste des meilleurs écoles d'ingénieurs de la France pour l'informatique, vous pouvez choisir entre un classement global ou afficher les écoles les plus proches de vous !</p>
-      <!--<p>Écoles d'ingénieur</p>
-      <p>Débouchées</p>-->
+      <a href="#" class="button">Écoles d'ingénieurs</a>
+      <a href="#" class="button">Débouchés</a>
     </header>
-    <section>
-      <section>
-        <img src="" alt="">
-        <h2>Lorem ipsum</h2>
-        <p>Lorem ipsum</p>
-        <p>En savoir plus</p>
+    <article class="#">
+      <section class="responsive">
+        <img src="iut.jpg" alt="">
+        <section>
+          <h2>Le Titre</h2>
+          <p>La description</p>
+          <a href="#" class="bouttonplus">En savoir plus</a>
+        </section>
       </section>
-      <section>
-        <img src="" alt="">
-        <h2>Lorem ipsum</h2>
-        <p>Lorem ipsum</p>
-        <p>En savoir plus</p>
+      <section class="responsive">
+        <img src="iut.jpg" alt="">
+        <section>
+          <h2>Le Titre</h2>
+          <p>La description</p>
+          <a href="#" class="bouttonplus">En savoir plus</a>
+        </section>
       </section>
-      <section>
-        <img src="" alt="">
-        <h2>Lorem ipsum</h2>
-        <p>Lorem ipsum</p>
-        <p>En savoir plus</p>
+      <section class="responsive">
+        <img src="iut.jpg" alt="">
+        <section>
+          <h2>Le Titre</h2>
+          <p>La description</p>
+          <a href="#" class="bouttonplus">En savoir plus</a>
+        </section>
       </section>
-      <section>
-        <img src="" alt="">
-        <h2>Lorem ipsum</h2>
-        <p>Lorem ipsum</p>
-        <p>En savoir plus</p>
+      <section class="responsive">
+        <img src="iut.jpg" alt="">
+        <section>
+          <h2>Le Titre</h2>
+          <p>La description</p>
+          <a href="#" class="bouttonplus">En savoir plus</a>
+        </section>
       </section>
-      <section>
-        <img src="" alt="">
-        <h2>Lorem ipsum</h2>
-        <p>Lorem ipsum</p>
-        <p>En savoir plus</p>
+      <section class="responsive">
+        <img src="iut.jpg" alt="">
+        <section>
+          <h2>Le Titre</h2>
+          <p>La description</p>
+          <a href="#" class="bouttonplus">En savoir plus</a>
+        </section>
       </section>
-      <section>
-        <img src="" alt="">
-        <h2>Lorem ipsum</h2>
-        <p>Lorem ipsum</p>
-        <p>En savoir plus</p>
+      <section class="responsive">
+        <img src="iut.jpg" alt="">
+        <section>
+          <h2>Le Titre</h2>
+          <p>La description</p>
+          <a href="#" class="bouttonplus">En savoir plus</a>
+        </section>
       </section>
-      <section>
-        <img src="" alt="">
-        <h2>Lorem ipsum</h2>
-        <p>Lorem ipsum</p>
-        <p>En savoir plus</p>
+      <section class="responsive">
+        <img src="iut.jpg" alt="">
+        <section>
+          <h2>Le Titre</h2>
+          <p>La description</p>
+          <a href="#" class="bouttonplus">En savoir plus</a>
+        </section>
       </section>
-      <section>
-        <img src="" alt="">
-        <h2>Lorem ipsum</h2>
-        <p>Lorem ipsum</p>
-        <p>En savoir plus</p>
+      <section class="responsive">
+        <img src="iut.jpg" alt="">
+        <section>
+          <h2>Le Titre</h2>
+          <p>La description</p>
+          <a href="#" class="bouttonplus">En savoir plus</a>
+        </section>
       </section>
-      <section>
-        <img src="" alt="">
-        <h2>Lorem ipsum</h2>
-        <p>Lorem ipsum</p>
-        <p>En savoir plus</p>
+      <section class="responsive">
+        <img src="iut.jpg" alt="">
+        <section>
+          <h2>Le Titre</h2>
+          <p>La description</p>
+          <a href="#" class="bouttonplus">En savoir plus</a>
+        </section>
       </section>
-    </section>
+    </article>
   </main>
   <footer>
     <p>Lorem Ipsum</p>
