--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
   <title>PPP Ingénieur</title>
   <link rel="stylesheet" href="index.css">
 </head>
@@ -22,12 +23,12 @@
       <a href="#" class="button">Écoles d'ingénieurs</a>
       <a href="#" class="button">Débouchés</a>
     </header>
-    <article class="#">
+    <article>
       <section class="responsive">
         <img src="iut.jpg" alt="">
         <section>
           <h2>Le Titre</h2>
-          <p>La description</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur commodo at arcu vel consequat. Morbi at vulputate felis, nec pulvinar.</p>
           <a href="#" class="bouttonplus">En savoir plus</a>
         </section>
       </section>
@@ -35,7 +36,7 @@
         <img src="iut.jpg" alt="">
         <section>
           <h2>Le Titre</h2>
-          <p>La description</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur commodo at arcu vel consequat. Morbi at vulputate felis, nec pulvinar.</p>
           <a href="#" class="bouttonplus">En savoir plus</a>
         </section>
       </section>
@@ -43,7 +44,7 @@
         <img src="iut.jpg" alt="">
         <section>
           <h2>Le Titre</h2>
-          <p>La description</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur commodo at arcu vel consequat. Morbi at vulputate felis, nec pulvinar.</p>
           <a href="#" class="bouttonplus">En savoir plus</a>
         </section>
       </section>
@@ -51,7 +52,7 @@
         <img src="iut.jpg" alt="">
         <section>
           <h2>Le Titre</h2>
-          <p>La description</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur commodo at arcu vel consequat. Morbi at vulputate felis, nec pulvinar.</p>
           <a href="#" class="bouttonplus">En savoir plus</a>
         </section>
       </section>
@@ -59,7 +60,7 @@
         <img src="iut.jpg" alt="">
         <section>
           <h2>Le Titre</h2>
-          <p>La description</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur commodo at arcu vel consequat. Morbi at vulputate felis, nec pulvinar.</p>
           <a href="#" class="bouttonplus">En savoir plus</a>
         </section>
       </section>
@@ -67,7 +68,7 @@
         <img src="iut.jpg" alt="">
         <section>
           <h2>Le Titre</h2>
-          <p>La description</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur commodo at arcu vel consequat. Morbi at vulputate felis, nec pulvinar.</p>
           <a href="#" class="bouttonplus">En savoir plus</a>
         </section>
       </section>
@@ -75,7 +76,7 @@
         <img src="iut.jpg" alt="">
         <section>
           <h2>Le Titre</h2>
-          <p>La description</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur commodo at arcu vel consequat. Morbi at vulputate felis, nec pulvinar.</p>
           <a href="#" class="bouttonplus">En savoir plus</a>
         </section>
       </section>
@@ -83,7 +84,7 @@
         <img src="iut.jpg" alt="">
         <section>
           <h2>Le Titre</h2>
-          <p>La description</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur commodo at arcu vel consequat. Morbi at vulputate felis, nec pulvinar.</p>
           <a href="#" class="bouttonplus">En savoir plus</a>
         </section>
       </section>
@@ -91,15 +92,24 @@
         <img src="iut.jpg" alt="">
         <section>
           <h2>Le Titre</h2>
-          <p>La description</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur commodo at arcu vel consequat. Morbi at vulputate felis, nec pulvinar.</p>
           <a href="#" class="bouttonplus">En savoir plus</a>
         </section>
       </section>
     </article>
   </main>
   <footer>
-    <p>Lorem Ipsum</p>
-    <p>Lorem Ipsum</p>
+    <section class="apropos">
+      <h2>À Propos</h2>
+      <p>Cette page a été créée dans le cadre de la création d'une page web pouvant fournir les informations nécessaires à des étudiants possedant un DUT informatique de trouver la meilleur écoles d'ingénieur selon leur localisation ou le classement de celle-ci</p>
+    </section>
+    <section class="contact">
+      <h2>Contact</h2>
+      <ul>
+        <li><a href="#">Site de l'IUT ></a></li>
+        <li><a href="#">Site de l'université ></a></li>
+      </ul>
+    </section>
   </footer>
 </body>
 </body>
