--- a/index.html
+++ b/index.html
@@ -17,12 +17,14 @@
     </a>
   </header>
   <main>
-    <header>
-      <h2>École Ingénieurs et débouchés</h2>
-      <p>Voilà la liste des meilleurs écoles d'ingénieurs de la France pour l'informatique, vous pouvez choisir entre un classement global ou afficher les écoles les plus proches de vous !</p>
-      <a href="#" class="button">Écoles d'ingénieurs</a>
-      <a href="#" class="button">Débouchés</a>
-    </header>
+    <section>
+      <header>
+        <h2>École Ingénieurs et débouchés</h2>
+        <p>Voilà la liste des meilleurs écoles d'ingénieurs de la France pour l'informatique, vous pouvez choisir entre un classement global ou afficher les écoles les plus proches de vous !</p>
+        <a href="#" class="button">Écoles d'ingénieurs</a>
+        <a href="#" class="button">Débouchés</a>
+      </header>
+    </section>
     <article>
       <section class="responsive">
         <img src="iut.jpg" alt="">
