--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
   <title>PPP Ingénieur</title>
-  <link rel="stylesheet" href="index.css">
+  <link rel="stylesheet" href="./style/main_article.css">
+  <link rel="stylesheet" href="./style/main_header.css">
+  <link rel="stylesheet" href="./style/navbar.css">
+  <link rel="stylesheet" href="./style/footer.css">
+  <link rel="stylesheet" href="./style/index.css">
 </head>
 
 <body>
@@ -26,74 +30,74 @@
       </header>
     </section>
     <article>
-      <section class="responsive">
+      <section class="responsive premier">
         <img src="iut.jpg" alt="">
         <section>
-          <h2>Le Titre</h2>
+          <h2>1</h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur commodo at arcu vel consequat. Morbi at vulputate felis, nec pulvinar.</p>
           <a href="#" class="bouttonplus">En savoir plus</a>
         </section>
       </section>
-      <section class="responsive">
+      <section class="responsive deuxieme">
         <img src="iut.jpg" alt="">
         <section>
-          <h2>Le Titre</h2>
+          <h2>2</h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur commodo at arcu vel consequat. Morbi at vulputate felis, nec pulvinar.</p>
           <a href="#" class="bouttonplus">En savoir plus</a>
         </section>
       </section>
-      <section class="responsive">
+      <section class="responsive troisieme">
         <img src="iut.jpg" alt="">
         <section>
-          <h2>Le Titre</h2>
+          <h2>3</h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur commodo at arcu vel consequat. Morbi at vulputate felis, nec pulvinar.</p>
           <a href="#" class="bouttonplus">En savoir plus</a>
         </section>
       </section>
-      <section class="responsive">
+      <section class="responsive quatrieme">
         <img src="iut.jpg" alt="">
         <section>
-          <h2>Le Titre</h2>
+          <h2>4</h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur commodo at arcu vel consequat. Morbi at vulputate felis, nec pulvinar.</p>
           <a href="#" class="bouttonplus">En savoir plus</a>
         </section>
       </section>
-      <section class="responsive">
+      <section class="responsive cinquieme">
         <img src="iut.jpg" alt="">
         <section>
-          <h2>Le Titre</h2>
+          <h2>5</h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur commodo at arcu vel consequat. Morbi at vulputate felis, nec pulvinar.</p>
           <a href="#" class="bouttonplus">En savoir plus</a>
         </section>
       </section>
-      <section class="responsive">
+      <section class="responsive sixieme">
         <img src="iut.jpg" alt="">
         <section>
-          <h2>Le Titre</h2>
+          <h2>6</h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur commodo at arcu vel consequat. Morbi at vulputate felis, nec pulvinar.</p>
           <a href="#" class="bouttonplus">En savoir plus</a>
         </section>
       </section>
-      <section class="responsive">
+      <section class="responsive septieme">
         <img src="iut.jpg" alt="">
         <section>
-          <h2>Le Titre</h2>
+          <h2>7</h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur commodo at arcu vel consequat. Morbi at vulputate felis, nec pulvinar.</p>
           <a href="#" class="bouttonplus">En savoir plus</a>
         </section>
       </section>
-      <section class="responsive">
+      <section class="responsive huitieme">
         <img src="iut.jpg" alt="">
         <section>
-          <h2>Le Titre</h2>
+          <h2>8</h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur commodo at arcu vel consequat. Morbi at vulputate felis, nec pulvinar.</p>
           <a href="#" class="bouttonplus">En savoir plus</a>
         </section>
       </section>
-      <section class="responsive">
+      <section class="responsive neuvieme">
         <img src="iut.jpg" alt="">
         <section>
-          <h2>Le Titre</h2>
+          <h2>9</h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur commodo at arcu vel consequat. Morbi at vulputate felis, nec pulvinar.</p>
           <a href="#" class="bouttonplus">En savoir plus</a>
         </section>
@@ -113,7 +117,6 @@
       </ul>
     </section>
   </footer>
-</body>
 </body>
 
 </html>
