Light dark mode

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
   <title>PPP Ingénieur</title>
+  <link rel="stylesheet" href="./style/light.css" id="pagestyle">
   <link rel="stylesheet" href="./style/main_article.css">
   <link rel="stylesheet" href="./style/main_header.css">
   <link rel="stylesheet" href="./style/navbar.css">
@@ -19,6 +20,7 @@
       <img src="./logob.png" alt="icone">
       <h1>Le nom</h1>
     </a>
+    <input type="checkbox" name="Dark Mode" id="toggle" onclick="ChangeCSS()">
   </header>
   <main>
     <section>
@@ -120,3 +122,5 @@
 </body>
 
 </html>
+
+<!-- 34 écoles -->
