--- a/index_template_(Jinja).html
+++ b/index_template_(Jinja).html
@@ -28,11 +28,7 @@
         <img src="iut.jpg" alt="">
         <section>
           <h2>{{nom}}</h2>
-          {% for (num, part1, part2) in descri %}
-          <p>
-            {{part1}}, {{part2}}, 
-            {{num}}
-          </p>
+          <p>{{descri}}</p>
           <a href="#" class="bouttonplus">En savoir plus</a>
         </section>
       </section>
