ajout de la fonctionnalité GEO

--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
   <link rel="stylesheet" href="./style/footer.css">
   <link rel="stylesheet" href="./style/index.css">
   <link rel="stylesheet" href="./style/dark.css" id="pagestyle">
+  <script src="./script/cssmode.js"></script>
+  <script src="./script/geolocation.js"></script>
 </head>
-
 <body>
   <header class="navbar">
     <a href="#" class="">
@@ -35,6 +36,7 @@
       </header>
     </section>
     <article>
+      <button id="location-button" onclick="SwapOrder()">Me géolocaliser</button>
       <section class="responsive premier">
         <img src="iut.jpg" alt="">
         <section>
