--- a/index.html
+++ b/index.html
@@ -15,16 +15,17 @@
   <script src="./script/cssmode.js"></script>
   <script src="./script/geolocation.js"></script>
 </head>
+
 <body>
   <header class="navbar">
     <a href="#" class="">
       <img src="./logob.png" alt="icone">
       <h1>Le nom</h1>
- 
-    </a><label class="switch">
-          <input type="checkbox" name="Dark Mode" id="toggle" checked onclick="ChangeCSS()">
-          <div class="slider round"></div>
-        </label>
+    </a>
+    <label class="switch">
+      <input type="checkbox" name="Dark Mode" id="toggle" checked onclick="ChangeCSS()">
+      <div class="slider round"></div>
+    </label>
   </header>
   <main>
     <section>
@@ -36,7 +37,10 @@
       </header>
     </section>
     <article>
-      <button id="location-button" onclick="SwapOrder()">Me géolocaliser</button>
+      <div>
+        <button id="location-button" onclick="SwapOrder()">Me géolocaliser</button>
+      </div>
+
       <section class="responsive premier">
         <img src="iut.jpg" alt="">
         <section>
