--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </section>
     <article>
       <div>
-        <button id="location-button" onclick="SwapOrder()">Me géolocaliser</button>
+        <input type="checkbox" name="Geolocation" id="location-button" onclick="SwapOrder()">
       </div>
 
       <section class="responsive premier">
