--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="fr">
-
+  
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -40,7 +40,7 @@
         <input type="checkbox" name="Geolocation" id="location-button" onclick="SwapOrder()">
       </div>
 
-      <section class="responsive">
+      <section class="responsive premier">
         <img src="iut.jpg" alt="">
         <section>
           <h2>1</h2>
@@ -48,7 +48,7 @@
           <a href="#" class="bouttonplus">En savoir plus</a>
         </section>
       </section>
-      <section class="responsive">
+      <section class="responsive deuxieme">
         <img src="iut.jpg" alt="">
         <section>
           <h2>2</h2>
@@ -56,7 +56,7 @@
           <a href="#" class="bouttonplus">En savoir plus</a>
         </section>
       </section>
-      <section class="responsive">
+      <section class="responsive troisieme">
         <img src="iut.jpg" alt="">
         <section>
           <h2>3</h2>
@@ -64,7 +64,7 @@
           <a href="#" class="bouttonplus">En savoir plus</a>
         </section>
       </section>
-      <section class="responsive">
+      <section class="responsive quatrieme">
         <img src="iut.jpg" alt="">
         <section>
           <h2>4</h2>
@@ -72,7 +72,7 @@
           <a href="#" class="bouttonplus">En savoir plus</a>
         </section>
       </section>
-      <section class="responsive">
+      <section class="responsive cinquieme">
         <img src="iut.jpg" alt="">
         <section>
           <h2>5</h2>
@@ -80,7 +80,7 @@
           <a href="#" class="bouttonplus">En savoir plus</a>
         </section>
       </section>
-      <section class="responsive">
+      <section class="responsive sixieme">
         <img src="iut.jpg" alt="">
         <section>
           <h2>6</h2>
@@ -88,7 +88,7 @@
           <a href="#" class="bouttonplus">En savoir plus</a>
         </section>
       </section>
-      <section class="responsive">
+      <section class="responsive septieme">
         <img src="iut.jpg" alt="">
         <section>
           <h2>7</h2>
@@ -96,7 +96,7 @@
           <a href="#" class="bouttonplus">En savoir plus</a>
         </section>
       </section>
-      <section class="responsive">
+      <section class="responsive huitieme">
         <img src="iut.jpg" alt="">
         <section>
           <h2>8</h2>
@@ -104,7 +104,7 @@
           <a href="#" class="bouttonplus">En savoir plus</a>
         </section>
       </section>
-      <section class="responsive">
+      <section class="responsive neuvieme">
         <img src="iut.jpg" alt="">
         <section>
           <h2>9</h2>
