--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <input type="checkbox" name="Geolocation" id="location-button" onclick="SwapOrder()">
       </div>
 
-      <section class="responsive premier">
+      <section class="responsive">
         <img src="iut.jpg" alt="">
         <section>
           <h2>1</h2>
@@ -48,7 +48,7 @@
           <a href="#" class="bouttonplus">En savoir plus</a>
         </section>
       </section>
-      <section class="responsive deuxieme">
+      <section class="responsive">
         <img src="iut.jpg" alt="">
         <section>
           <h2>2</h2>
@@ -56,7 +56,7 @@
           <a href="#" class="bouttonplus">En savoir plus</a>
         </section>
       </section>
-      <section class="responsive troisieme">
+      <section class="responsive">
         <img src="iut.jpg" alt="">
         <section>
           <h2>3</h2>
@@ -64,7 +64,7 @@
           <a href="#" class="bouttonplus">En savoir plus</a>
         </section>
       </section>
-      <section class="responsive quatrieme">
+      <section class="responsive">
         <img src="iut.jpg" alt="">
         <section>
           <h2>4</h2>
@@ -72,7 +72,7 @@
           <a href="#" class="bouttonplus">En savoir plus</a>
         </section>
       </section>
-      <section class="responsive cinquieme">
+      <section class="responsive">
         <img src="iut.jpg" alt="">
         <section>
           <h2>5</h2>
@@ -80,7 +80,7 @@
           <a href="#" class="bouttonplus">En savoir plus</a>
         </section>
       </section>
-      <section class="responsive sixieme">
+      <section class="responsive">
         <img src="iut.jpg" alt="">
         <section>
           <h2>6</h2>
@@ -88,7 +88,7 @@
           <a href="#" class="bouttonplus">En savoir plus</a>
         </section>
       </section>
-      <section class="responsive septieme">
+      <section class="responsive">
         <img src="iut.jpg" alt="">
         <section>
           <h2>7</h2>
@@ -96,7 +96,7 @@
           <a href="#" class="bouttonplus">En savoir plus</a>
         </section>
       </section>
-      <section class="responsive huitieme">
+      <section class="responsive">
         <img src="iut.jpg" alt="">
         <section>
           <h2>8</h2>
@@ -104,7 +104,7 @@
           <a href="#" class="bouttonplus">En savoir plus</a>
         </section>
       </section>
-      <section class="responsive neuvieme">
+      <section class="responsive">
         <img src="iut.jpg" alt="">
         <section>
           <h2>9</h2>
