--- a/index.html
+++ b/index.html
@@ -37,7 +37,10 @@
     </section>
     <article>
       <div>
+        <label class="switch">
         <input type="checkbox" name="Geolocation" id="location-button" onclick="SwapOrder()">
+        <div class="slider round"></div>
+      </label>
       </div>
 
       <section class="responsive">
