--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="fr">
-  
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -12,7 +12,6 @@
   <link rel="stylesheet" href="./style/footer.css">
   <link rel="stylesheet" href="./style/index.css">
   <link rel="stylesheet" href="./style/dark.css" id="pagestyle">
-  <script src="./script/geolocation.js"></script>
 </head>
 
 <body>
@@ -42,76 +41,123 @@
         <div class="slider round"></div>
       </label>
       </div>
-
       <section class="responsive">
-        <img src="iut.jpg" alt="">
+        <img src="./img/Polytech_Lille.jpg" alt="">
         <section>
-          <h2>1</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur commodo at arcu vel consequat. Morbi at vulputate felis, nec pulvinar.</p>
+          <h2>Polytech Lille</h2>
+          <p>Informatique microélectronique automatique et Génie informatique et statistique</p>
           <a href="#" class="bouttonplus">En savoir plus</a>
         </section>
       </section>
       <section class="responsive">
         <img src="iut.jpg" alt="">
         <section>
-          <h2>2</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur commodo at arcu vel consequat. Morbi at vulputate felis, nec pulvinar.</p>
+          <h2>Polytech Sorbonne</h2>
+          <p>Electronique et informatique, Mathématiques appliquées et informatique</p>
           <a href="#" class="bouttonplus">En savoir plus</a>
         </section>
       </section>
       <section class="responsive">
         <img src="iut.jpg" alt="">
         <section>
-          <h2>3</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur commodo at arcu vel consequat. Morbi at vulputate felis, nec pulvinar.</p>
+          <h2>Polytech Paris-Sud</h2>
+          <p>Electronique et systèmes robotisés, Informatique et Photonique et systèmes optroniques</p>
           <a href="#" class="bouttonplus">En savoir plus</a>
         </section>
       </section>
       <section class="responsive">
         <img src="iut.jpg" alt="">
         <section>
-          <h2>4</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur commodo at arcu vel consequat. Morbi at vulputate felis, nec pulvinar.</p>
+          <h2>Polytech Nancy</h2>
+          <p>Ingénierie de l’Information et des Systèmes et Internet Industriel</p>
           <a href="#" class="bouttonplus">En savoir plus</a>
         </section>
       </section>
       <section class="responsive">
         <img src="iut.jpg" alt="">
         <section>
-          <h2>5</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur commodo at arcu vel consequat. Morbi at vulputate felis, nec pulvinar.</p>
+          <h2>Polytech Orleans</h2>
+          <p>Ingénierie de l’Information et des Systèmes et Internet Industriel</p>
           <a href="#" class="bouttonplus">En savoir plus</a>
         </section>
       </section>
       <section class="responsive">
         <img src="iut.jpg" alt="">
         <section>
-          <h2>6</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur commodo at arcu vel consequat. Morbi at vulputate felis, nec pulvinar.</p>
+          <h2>Polytech Tours</h2>
+          <p>Informatique, Internet Industriel</p>
           <a href="#" class="bouttonplus">En savoir plus</a>
         </section>
       </section>
       <section class="responsive">
         <img src="iut.jpg" alt="">
         <section>
-          <h2>7</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur commodo at arcu vel consequat. Morbi at vulputate felis, nec pulvinar.</p>
+          <h2>Polytech Angers</h2>
+          <p>Systèmes automatisés et génie informatique</p>
           <a href="#" class="bouttonplus">En savoir plus</a>
         </section>
       </section>
       <section class="responsive">
         <img src="iut.jpg" alt="">
         <section>
-          <h2>8</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur commodo at arcu vel consequat. Morbi at vulputate felis, nec pulvinar.</p>
+          <h2>Polytech Nantes</h2>
+          <p>Informatique</p>
           <a href="#" class="bouttonplus">En savoir plus</a>
         </section>
       </section>
       <section class="responsive">
         <img src="iut.jpg" alt="">
         <section>
-          <h2>9</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur commodo at arcu vel consequat. Morbi at vulputate felis, nec pulvinar.</p>
+          <h2>Polytech Lyon</h2>
+          <p>Informatique</p>
+          <a href="#" class="bouttonplus">En savoir plus</a>
+        </section>
+      </section>
+      <section class="responsive">
+        <img src="iut.jpg" alt="">
+        <section>
+          <h2>Polytech Clermont-Ferrand</h2>
+          <p>Génie mathématique et modélisation</p>
+          <a href="#" class="bouttonplus">En savoir plus</a>
+        </section>
+      </section>
+      <section class="responsive">
+        <img src="iut.jpg" alt="">
+        <section>
+          <h2>Polytech Annecy-Chambéry</h2>
+          <p>Informatique, Données, Instrumentation, Automatique</p>
+          <a href="#" class="bouttonplus">En savoir plus</a>
+        </section>
+      </section>
+      <section class="responsive">
+        <img src="iut.jpg" alt="">
+        <section>
+          <h2>Polytech Grenoble</h2>
+          <p>Informatique et Informatique et Electronique des Systèmes Embarqués</p>
+          <a href="#" class="bouttonplus">En savoir plus</a>
+        </section>
+      </section>
+      <section class="responsive">
+        <img src="./img/Polytech_Montpellier.jpg" alt="">
+        <section>
+          <h2>Polytech Montpellier</h2>
+          <p>Informatique et gestion et Systèmes embarqués</p>
+          <a href="#" class="bouttonplus">En savoir plus</a>
+        </section>
+      </section>
+      <section class="responsive">
+        <img src="iut.jpg" alt="">
+        <section>
+          <h2>Polytech Nice Sophia</h2>
+          <p>Informatique et Informatique par apprentissage</p>
+          <a href="#" class="bouttonplus">En savoir plus</a>
+        </section>
+      </section>
+      <section class="responsive">
+        <img src="iut.jpg" alt="">
+        <section>
+          <h2>Polytech Marseille</h2>
+          <p>Informatique et Génie industriel et informatique</p>
           <a href="#" class="bouttonplus">En savoir plus</a>
         </section>
       </section>
@@ -133,7 +179,7 @@
 </body>
 <!-- Script JS permettant le passage entre le mode clair et le mode sombre -->
 <script src="./script/cssmode.js"></script>
+<script src="./script/geolocation.js"></script>
+
 
 </html>
-
-<!-- 34 écoles -->
